--- a/asound.conf
+++ b/asound.conf
@@ -1,8 +1,10 @@
-pcm.card0 {
-    type hw
-    card 0
+pcm.!default {
+type hw
+card 1
+device 0
 }
-ctl.card0 {
-    type hw
-    card 0
+ctl.!default {
+type hw
+card 1
+device 0
 }
