--- a/asound.conf
+++ b/asound.conf
@@ -1,10 +1,8 @@
 pcm.!default {
-type hw
-card 0
-device 0
+type software
+card 1
 }
 ctl.!default {
-type hw
-card 0
-device 0
+type software
+card 1
 }
